--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div class="chat">
+  <i class="fa-solid fa-comment-sms"></i>
   <div class="chat-title">
     <h1>Polsing Ambule</h1>
     <h2>UI Developer</h2>
