--- a/index.html
+++ b/index.html
@@ -14,28 +14,60 @@
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
 
-</head>
+</head> 
 <body>
-<div class="chat">
-<!--   <i class="fa-solid fa-comment-sms"></i> -->
-  <div class="chat-title">
-    <h1>Polsing Ambule</h1>
-    <h2>UI Developer</h2>
-    <figure class="avatar">
-      <img src="images/img_pro.jpg" />
-    </figure>
-  </div>
-  <div class="messages">
-    <div class="messages-content"></div>
-  </div>
-  <div class="message-box">
-    <input type="text" class="message-input" placeholder="Type message...">
-    <button type="submit" class="message-submit"><i class="fa-solid fa-angles-right"></i></button>
-  </div>
+  <section class="back_img">
+    <div id="demo">
+      <div class="chat">
+        <div class="chat-title">
+          <div class="title_hide_btn">
+            <h1>Sapna</h1>
+            <a href="javascript:timedRefresh(100)"><img src="images/refresh.png"></a>
+            <button type="button" onclick="hide()"><img src="images/minimize.png"></button>
+          </div>
+          <figure class="avatar">
+            <img src="images/img_pro.1.jpg" />
+          </figure>
+        </div>
+        <div class="messages">
+          <div class="messages-content"></div>
+        </div>
+        <div class="message-box">
+          <input type="text" class="message-input" placeholder="Type your message here...">
+          <button type="submit" class="message-submit"><img src="images/send_btn.png"></button>
+        </div>
+      </div>
+    </div>
 
+<div class="show_chat_btn">
+  <button type="button" onclick="show()">Hey! I am Sapna...<br>Your Admission Assistant.</button>
+  <img onclick="show()" src="images/asst_img.png">
 </div>
-<div class="bg"></div>
+</section>
 <!-- partial -->
+<script>
+function hide() {
+  x = document.getElementById('demo');
+  x.className = 'hide';
+  
+function timedRefresh(timeoutPeriod) {
+  setTimeout("location.reload(true);",timeoutPeriod);
+}
+
+}
+
+function show() {
+  document.getElementById('demo');
+  x.className = 'show';
+}
+</script>
+<script>
+<!--
+function timedRefresh(timeoutPeriod) {
+  setTimeout("location.reload(true);",timeoutPeriod);
+}
+//   -->
+</script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
 <script type="text/javascript" src="js/script.js"></script>
